[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RadGEEToolbox"
version = "1.7.1"
description = "Streamlined Multispectral & SAR Analysis for Google Earth Engine Python API"
authors = [
    {name = "Mark Radwin", email = "markradwin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "earthengine-api",
    "numpy",
    "pandas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent"
]


[tool.setuptools]
packages = ["RadGEEToolbox"]

[project.urls]
Homepage = "https://github.com/radwinskis/RadGEEToolbox"
Documentation = "https://radgeetoolbox.readthedocs.io/en/latest/"
Issues = "https://github.com/radwinskis/RadGEEToolbox/issues"
